<resources>
    <string name="app_name">АвтоТрейдер</string>
    <string name="no_internet">Проверьте соединение с интернетом</string>
    <string name="no_server">Сервер временно не доступен.
Попытайтесь позже.</string>
    <string name="NameSearch">Название поиска</string>
    <string name="MakeCar">Марка автомобиля</string>
    <string name="ModelCar">Модель автомобиля</string>
    <string name="year">Год выпуска</string>
    <string name="add_new_search">Добавить новый поиск тут</string>
    <string name="ok">Ok</string>
    <string name="setting">Изменить настройки тут</string>
    <string name="result">Результаты поиска будут тут</string>
    <string name="new_search">Добавить новый поиск</string>
    <string name="want_price">Максимальная цена <b>(в USD)</b></string>
    <string name="warning">Обязательно для заполнения</string>
    <string name="price">Цена:</string>
    <string name="usd">USD</string>
    <string name="new_car">NEW</string>
    <string name="setting_tool_bar">Настройки</string>
    <string name="link">Связаться с разработчиком</string>
    <string name="about_app">О приложении</string>
    <string name="schedule">Периодичность мониторинга:</string>
    <string name="new_car_search">Присылать оповещения при появлении новых авто</string>
    <string name="sound">Звуковой сигнал при оповещении</string>
    <string name="save_setting">Сохранить настройки</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="email">develop.commun@gmail.com</string>
    <string name="commun">Адрес для связи</string>
    <string name="about_app_text">  Приложение “АвтоТерйдер” берёт информацию о продаваемых авто
        на сайте av.by.\n От Вас требуется:\n\n -	указать максимальную сумму
        которую готовы потратить на приобретение авто;\n -	выбрать желаемую модель
        и прочие параметры;\n -	в настройках указать периодичность мониторинга сайта;\n\n
    В результате приложение будет автоматически заходить в интернет и,
        учитывая Ваши пожелания, отбирать подходящие объявления.</string>
</resources>
