<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="effexor.roman.nikonovich.presentation.screens.setting.SettingViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView10"
            style="@style/text_add_new.text"
            android:text="@string/schedule"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinSchedule"
            style="@style/spinner_def"
            android:entries="@array/schedule_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <View
            android:id="@+id/view"
            style="@style/divider.setting_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            style="@style/divider.setting_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinSchedule" />

        <View
            android:id="@+id/view4"
            style="@style/divider.setting_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView112" />

        <View
            android:id="@+id/view3"
            style="@style/divider.setting_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView11"
            style="@style/text_setting"
            android:text="@string/new_car_search"
            app:layout_constraintEnd_toStartOf="@+id/checkBox"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/checkBox" />

        <CheckBox
            android:id="@+id/checkBox"
            style="@style/check_box"
            android:checked="@={viewModel.setNotif}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <CheckBox
            android:id="@+id/checkBox2"
            style="@style/check_box"
            android:checked="@={viewModel.setSound}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/textView112"
            style="@style/text_setting"
            android:text="@string/sound"
            app:layout_constraintEnd_toStartOf="@+id/checkBox2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/checkBox2" />

        <Button
            style="@style/button_add"
            android:onClick="@{()-> viewModel.saveSetting ()}"
            android:text="@string/save_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

    </android.support.constraint.ConstraintLayout>
</layout>

