<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="effexor.roman.nikonovich.presentation.screens.formFilling.AddSearchViewModel" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/toolbarView"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    style="@style/tool_bar">

                    <include layout="@layout/name_app" />
                </android.support.v7.widget.Toolbar>
            </android.support.design.widget.AppBarLayout>

            <EditText
                android:id="@+id/editText2"
                style="@style/edit_add_new"
                android:layout_marginTop="68dp"
                android:afterTextChanged="@{(s)->viewModel.setNameSearch(s)}"
                android:backgroundTint="@color/divider"
                android:hint="@{viewModel.isFill ? @string/NameSearch : @string/warning}"
                android:textColorHint="@{viewModel.isFill ? @color/main_white : @color/secondHint}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText3"
                style="@style/edit_add_new"
                android:afterTextChanged="@{(s)->viewModel.setPriceSearch(s)}"
                android:hint="@{viewModel.isFill ? @string/want_price : @string/warning}"
                android:inputType="number"
                android:textColorHint="@{viewModel.isFill ? @color/main_white : @color/secondHint}"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText2"
                app:layout_constraintVertical_bias="0.074" />

            <TextView
                android:id="@+id/textView"
                style="@style/text_add_new"
                android:text="@string/MakeCar"
                app:layout_constraintBottom_toTopOf="@+id/spinnerMake"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerMake"
                style="@style/spinner_custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView2"
                style="@style/text_add_new"
                android:text="@string/ModelCar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerMake" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerModel"
                style="@style/spinner_custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                style="@style/text_add_new"
                android:text="@string/year"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerModel" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerFrom"
                style="@style/spinner_def"
                android:layout_marginStart="8dp"
                android:background="@drawable/spinner"
                android:entries="@array/chooseYearFrom"
                app:layout_constraintBottom_toBottomOf="@+id/spinnerTo"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/spinnerTo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerTo"
                style="@style/spinner_def"
                android:layout_marginEnd="8dp"
                android:entries="@array/chooseYearTo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Button
                style="@style/button_add"
                android:onClick="@{()->viewModel.getUrl()}"
                android:text="@string/new_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>
